--- a/doc/gates.bib
+++ b/doc/gates.bib
@@ -151,3 +151,33 @@ CONCLUSION: This study has provided evidence that extending routine influenza va
 	pages = {100367},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\witol\\Zotero\\storage\\Q92R4KB6\\Chatzilena et al. - 2019 - Contemporary statistical inference for infectious .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\witol\\Zotero\\storage\\TZNBPGZ4\\S1755436519300325.html:text/html}
 }
+
+@article{day_covid-19_2020,
+	title = {Covid-19: four fifths of cases are asymptomatic, {China} figures indicate},
+	volume = {369},
+	copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://group.bmj.com/group/rights-licensing/permissions},
+	issn = {1756-1833},
+	shorttitle = {Covid-19},
+	url = {https://www.bmj.com/content/369/bmj.m1375},
+	doi = {10.1136/bmj.m1375},
+	language = {en},
+	urldate = {2020-04-27},
+	journal = {BMJ},
+	author = {Day, Michael},
+	month = apr,
+	year = {2020},
+	pmid = {32241884},
+	file = {Full Text PDF:files/1444/Day - 2020 - Covid-19 four fifths of cases are asymptomatic, C.pdf:application/pdf;Snapshot:files/1442/bmj.html:text/html}
+}
+
+@misc{noauthor_covid-19_nodate,
+	title = {{COVID}-19: {What} proportion are asymptomatic?},
+	author = {Heneghan, Carl},
+	shorttitle = {{COVID}-19},
+	url = {https://www.cebm.net/covid-19/covid-19-what-proportion-are-asymptomatic/},
+	abstract = {Carl Heneghan, Jon Brassey, Tom Jefferson Readers of the blog will be aware that we have little trust in the},
+	language = {en},
+	urldate = {2020-04-27},
+	journal = {CEBM},
+	file = {Snapshot:files/1446/covid-19-what-proportion-are-asymptomatic.html:text/html}
+}
