--- a/doc/gates.bib
+++ b/doc/gates.bib
@@ -1,4 +1,25 @@
 
+@article{mossong_social_2008,
+	title = {Social contacts and mixing patterns relevant to the spread of infectious diseases},
+	volume = {5},
+	issn = {1549-1676},
+	doi = {10.1371/journal.pmed.0050074},
+	abstract = {BACKGROUND: Mathematical modelling of infectious diseases transmitted by the respiratory or close-contact route (e.g., pandemic influenza) is increasingly being used to determine the impact of possible interventions. Although mixing patterns are known to be crucial determinants for model outcome, researchers often rely on a priori contact assumptions with little or no empirical basis. We conducted a population-based prospective survey of mixing patterns in eight European countries using a common paper-diary methodology.
+METHODS AND FINDINGS: 7,290 participants recorded characteristics of 97,904 contacts with different individuals during one day, including age, sex, location, duration, frequency, and occurrence of physical contact. We found that mixing patterns and contact characteristics were remarkably similar across different European countries. Contact patterns were highly assortative with age: schoolchildren and young adults in particular tended to mix with people of the same age. Contacts lasting at least one hour or occurring on a daily basis mostly involved physical contact, while short duration and infrequent contacts tended to be nonphysical. Contacts at home, school, or leisure were more likely to be physical than contacts at the workplace or while travelling. Preliminary modelling indicates that 5- to 19-year-olds are expected to suffer the highest incidence during the initial epidemic phase of an emerging infection transmitted through social contacts measured here when the population is completely susceptible.
+CONCLUSIONS: To our knowledge, our study provides the first large-scale quantitative approach to contact patterns relevant for infections transmitted by the respiratory or close-contact route, and the results should lead to improved parameterisation of mathematical models used to design control strategies.},
+	language = {eng},
+	number = {3},
+	journal = {PLoS medicine},
+	author = {Mossong, Joël and Hens, Niel and Jit, Mark and Beutels, Philippe and Auranen, Kari and Mikolajczyk, Rafael and Massari, Marco and Salmaso, Stefania and Tomba, Gianpaolo Scalia and Wallinga, Jacco and Heijne, Janneke and Sadkowska-Todys, Malgorzata and Rosinska, Magdalena and Edmunds, W. John},
+	month = mar,
+	year = {2008},
+	pmid = {18366252},
+	pmcid = {PMC2270306},
+	keywords = {Aged, Female, Humans, Male, Middle Aged, Adult, Adolescent, Child, Child, Preschool, Infant, Cross-Sectional Studies, Europe, Models, Theoretical, Respiratory Tract Infections, Social Support},
+	pages = {e74},
+	file = {Full Text:C\:\\Users\\wwiecek.CERTARA\\Zotero\\storage\\IW4GE67S\\Mossong et al. - 2008 - Social contacts and mixing patterns relevant to th.pdf:application/pdf}
+}
+
 @article{kamal_interdisciplinary_2017,
 	title = {Interdisciplinary pharmacometrics linking oseltamivir pharmacology, influenza epidemiology and health economics to inform antiviral use in pandemics: {Linking} pharmacology to influenza epidemiology and health economics},
 	volume = {83},
